# idlez

idle_game/: Cargo.toml  index.html
idle_game/css/: styles.css
idle_game/html/: fishing.html  mining.html
idle_game/js/: ProgressBar.js  main.js
idle_game/src/: lib.rs
idle_game_backend/: .env  Cargo.toml
idle_game_backend/data/: idle_game.db
idle_game_backend/migrations/: 20240618222027_create_tables.sql
idle_game_backend/src/: main.rs
