[package]
name = "idle_game_backend"
version = "0.1.0"
authors = ["JustiniPepperini"]
edition = "2018"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std", "tls-rustls", "macros", "uuid"] }
dotenv = "0.15"
async-std = { version = "1.10", features = ["attributes"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
env_logger = "0.9.0"